--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Discover investment opportunities with our intuitive stock comparator app. Input your initial investment,
+    choose stocks, and monitor their performance over time. Stay informed with related news tailored to your portfolio and identify daily top gainers and losers.
+    Optimize your financial strategies and invest smarter with our comprehensive tools. Get started today!" />
+  <meta name="author" content="Trevor Tran | Seattle, WA" />
+
+  <!-- meta tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Trevor Tran | Seattle, WA" />
+  <meta property="og:description" content="Discover investment opportunities with our intuitive stock comparator app. Input your initial investment,
+    choose stocks, and monitor their performance over time. Stay informed with related news tailored to your portfolio and identify daily top gainers and losers.
+    Optimize your financial strategies and invest smarter with our comprehensive tools. Get started today!" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://trevortran.com" />
+  <!-- end meta tags -->
+
+
+  <!-- twitter tags -->
+  <meta name="twitter:creator" content="Trevor Tran | Seattle, WA" />
+  <meta name="twitter:card" content="website" />
+  <meta name="twitter:title" content="Trevor Tran | Seattle, WA" />
+  <meta name="twitter:description" content="Discover investment opportunities with our intuitive stock comparator app. Input your initial investment,
+    choose stocks, and monitor their performance over time. Stay informed with related news tailored to your portfolio and identify daily top gainers and losers.
+    Optimize your financial strategies and invest smarter with our comprehensive tools. Get started today!" />
+  <!-- end twitter tags -->
+
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-t.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +47,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Stock Comparator</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +63,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
