add google adsense

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -48,6 +48,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Stock Comparator</title>
+
+  <meta name="google-adsense-account" content="ca-pub-8660547590742412">
 </head>
 
 <body>
